// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with tabs 1`] = `
<div
  class="sc-AxirZ kzGTef"
>
  <h3
    class="sc-AxjAm liSvtH sc-AxiKw gnMQvJ"
    data-testid="location"
  >
    Phone
  </h3>
  <div
    class="sc-fzozJi cKrXJI"
  >
    <a
      aria-current="page"
      class="sc-AxhCb euWTOk sc-fzoLsD eCQDqv active"
      displaystyle="9"
      href="/phone"
      size="2"
    >
      <test-file-stub
        classname="sc-Axmtr qrato"
      />
      <p
        class="sc-AxjAm eGfSTk sc-AxmLO bpBasD"
      >
        Contacts
      </p>
    </a>
    <a
      class="sc-AxhCb euWTOk sc-fzoLsD eCQDqv"
      displaystyle="9"
      href="/phone/calls"
      size="2"
    >
      <test-file-stub
        classname="sc-Axmtr qrato"
      />
      <p
        class="sc-AxjAm eGfSTk sc-AxmLO bpBasD"
      >
        Calls
      </p>
    </a>
    <a
      class="sc-AxhCb euWTOk sc-fzoLsD eCQDqv"
      displaystyle="9"
      href="/phone/dial"
      size="2"
    >
      <test-file-stub
        classname="sc-Axmtr qrato"
      />
      <p
        class="sc-AxjAm eGfSTk sc-AxmLO bpBasD"
      >
        Dial
      </p>
    </a>
  </div>
  <div />
</div>
`;

exports[`matches snapshot without tabs 1`] = `
<div
  class="sc-AxirZ kzGTef"
>
  <h3
    class="sc-AxjAm liSvtH sc-AxiKw gnMQvJ"
    data-testid="location"
  >
    Overview
  </h3>
  <div
    class="sc-fzozJi cKrXJI"
  />
  <div />
</div>
`;
